objects/EIN_Results__x.object
<CustomObject>
    <fields>
        <fullName>Account_360__c</fullName>
        <description>Account 360</description>
        <externalDeveloperName>Account 360</externalDeveloperName>
        <label>Account 360</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account Name</description>
        <externalDeveloperName>Account Name</externalDeveloperName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account</description>
        <externalDeveloperName>Account</externalDeveloperName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <description>EIN</description>
        <externalDeveloperName>EIN</externalDeveloperName>
        <label>EIN</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Payroll_Company_Id__c</fullName>
        <description>Payroll Company Id</description>
        <externalDeveloperName>Payroll Company Id</externalDeveloperName>
        <label>Payroll Company Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Realm_Id__c</fullName>
        <description>Realm Id</description>
        <externalDeveloperName>Realm Id</externalDeveloperName>
        <label>Realm Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>